Installed react router and react router dom for proper routing. Wrapped buttons from navbar in link tags and styled to make sure they don't interfere with existing design. Now four routes are existing,  Bosses, Areas, Crafting, and CheatSheet. Bosses route now routes to BossForm Component. Other routes still need appropriate forms.

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,17 @@ table {
     justify-content: space-evenly;
 }
 
+a {
+    width: 100%;
+    color: inherit;
+    padding: none;
+    margin: none;
+}
+
+a:link, a:visited, a:hover, a:active {
+    text-decoration: none;
+}
+
 .container {
     display: flex;
     justify-content: center;
